/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.homework;

/**
 *
 * @author Lenovo
 */
public class Homework {

    public static void main(String[] args) {
        
    }
}
